--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/jest": "^24.0.20",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
@@ -31,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0",
+    "typesafe-actions": "^5.1.0-1",
     "typescript": "^3.6.4",
     "yup": "^0.27.0"
   },
