--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app/index.js",
-    "start": "node app/index.js",
+    "start": "NODE_ENV=production node app/index.js",
     "build": "npm install --prefix client && npm run build --prefix client"
   },
   "author": "cody.hu <codyooo1993@gmail.com> (http://github.com/codyooo)",
