--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/react-onclickoutside": "^6.7.3",
     "@types/react-redux": "^7.1.5",
     "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "^3.0.7",
@@ -24,6 +25,7 @@
     "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-onclickoutside": "^6.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
