--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app/index.js",
+    "server": "nodemon app/index.js",
+    "client": "npm run start --prefix client",
     "start": "NODE_ENV=production node app/index.js",
-    "build": "npm install --prefix client && npm run build --prefix client"
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "cody.hu <codyooo1993@gmail.com> (http://github.com/codyooo)",
   "license": "MIT",
   "dependencies": {
     "client": "file:client",
     "compression": "^1.7.4",
+    "concurrently": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.10.0",
@@ -27,6 +29,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "mongoose": "^5.7.5",
+    "passport": "^0.4.0",
     "prefix": "^1.0.0",
     "react-router-dom": "^5.1.2",
     "remove": "^0.1.5"
