--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^4.4.0",
     "typesafe-actions": "^5.1.0-1",
     "typescript": "^3.6.4",
+    "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
   "proxy": "http://localhost:3000",
